challenge-15-network-security/srijan-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srijan-default-deny-ingress
  namespace: srijan-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
